--- a/hydromassage.html
+++ b/hydromassage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Float Spa 19 - Hydromassage</title>
+    <title>Float Spa 19 - HydroMassage</title>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <meta http-equiv='x-ua-compatible' content='ie-edge'>
@@ -43,7 +43,7 @@
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
-                        <button class="btn btn-book">Book Now</button>
+                        <a class='btn btn-book' href='./book.html'>Book Now</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                 </li>
                 <li class='services-menu-item selected'>
                     <a href='./hydromassage.html' class='services-menu-link'>
-                        Hydromassage
+                        HydroMassage
                         <div class='services-hover-id'></div>
                     </a>
 
@@ -84,6 +84,57 @@
                 </li>
             </ul>
         </div>
+
+        <!-- hydro info -->
+        <div class='hydro-header-container'>
+            <div class='hydro-header'>
+                <img src='./images/hydro_header.jpg' alt='HydroMassage Chair'>
+            </div>
+            <div class='hydro-header-title'>What is HydroMassage?</div>
+            <div class='hydro-header-info'>
+                HydroMassage lounge gives you all the benefits of a massage without getting wet. HydroMassage is designed to use waves of
+                heated water to provide an innovative experience.
+            </div>
+            <div class='hydro-benefits-container'>
+                <table class='hydro-benefits-table'>
+                    <tbody>
+                        <tr>
+                            <td class='hydro-benefits'>
+                                <div class='hydro-benefits-header'>
+                                    HydroMassage Benefits
+                                </div>
+                                <div class='hydro-benefits-list-wrapper'>
+                                    <ul class='hydro-benefits-list'>
+                                        <li class='hydro-benefit-listitem'>Reduce levels of stress and anxiety</li>
+                                        <li class='hydro-benefit-listitem'>Temporary relief of minor aches and pains</li>
+                                        <li class='hydro-benefit-listitem'>Increases circulation</li>
+                                        <li class='hydro-benefit-listitem'>Relieves muscle soreness, stiffness, and tension</li>
+                                        <li class='hydro-benefit-listitem'>Adjustable to your needs or preferences</li>
+                                        <li class='hydro-benefit-listitem'>Adjust your own intensity, speed, and temperature</li>
+                                        <li class='hydro-benefit-listitem'>Comfortable, convenient, and affordable</li>
+                                    </ul>
+                                </div>
+                            </td>
+                            <td class='hydro-benefits hydro-chair-img'>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class='hydro-cost-container'>
+                <div class='hydro-cost-tagline'>
+                    Try HydroMassage Today
+                </div>
+                <div class='hydro-cost-wrapper'>
+                    <div class='hydro-cost'>Price</div>
+                    <div class='hydro-cost'>15 Minute Sessions | $20</div>
+                    <div class='hydro-cost-btn-wrapper'>
+                        <a class='btn btn-book' href='./book.html'>Book Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
