button link + packages content

--- a/packages.html
+++ b/packages.html
@@ -43,7 +43,7 @@
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
-                        <button class="btn btn-book">Book Now</button>
+                        <a class='btn btn-book' href='./book.html'>Book Now</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
                 </li>
                 <li class='services-menu-item'>
                     <a href='./hydromassage.html' class='services-menu-link'>
-                        Hydromassage
+                        HydroMassage
                         <div class='services-hover-id'></div>
                     </a>
 
@@ -85,100 +85,80 @@
                 </li>
             </ul>
         </div>
-        <div class='package-container section-packages'>
+        <div class='package-container section-packages clear'>
+            <div class='package-wrapper'>
+                <div class='package-padder'>
+                    <div class='package-title title-1'>
+                        <div class='title-fader'></div>
+                        <div class='title-text'>Float &amp; HydroMassage</div>
+                    </div>
+                    <div class='package-content'>
+                        <div class='package-cost-wrapper'>
+                            $78
+                        </div>
+                        <div class='package-divider'>
+                            <img src='./images/package_divider.png'>
+                        </div>
+                        <ul class='package-list'>
+                            <li class='package-listitem'>
+                                60 Minute Float
+                            </li>
+                            <li class='package-listitem'>
+                                15 Minute HydroMassage
+                            </li>
+                            <li class='package-listitem'>
+                                Includes preparation and shower time
+                            </li>
+                            <li class='package-listitem'>
+                                A full hour will be spent in float pad
+                            </li>
+                            <li class='package-listitem'>
+                                Enjoy HydroMassage before or after your float
+                            </li>
+                        </ul>
 
-            <table class='package-table'>
-                <tbody>
-                    <tr>
-                        <td class='package-wrapper'>
-                            <div class='package-padder'>
-                                <div class='package-title'>
-                                    1st Package Name
-                                </div>
-                                <div class='package-divider'></div>
-                                <ul class='package-list'>
-                                    <li class='package-listitem'>
-                                        First thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        Second thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        Third thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        If there is more things
-                                    </li>
-                                    <li class='package-listitem'>
-                                        What else does it include?
-                                    </li>
-                                </ul>
-
-                                <div class='package-book'>
-                                    <button class='btn btn-book'>Book Now</button>
-                                </div>
-                            </div>
-                        </td>
-                        <td class='package-wrapper'>
-                            <div class='package-padder'>
-                                <div class='package-title'>
-                                    2nd Package Name
-                                </div>
-                                <div class='package-divider'></div>
-                                <ul class='package-list'>
-                                    <li class='package-listitem'>
-                                        First thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        Second thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        Third thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        If there is more things
-                                    </li>
-                                    <li class='package-listitem'>
-                                        What else does it include?
-                                    </li>
-                                </ul>
-                                <div class='package-book'>
-                                    <button class='btn btn-book'>Book Now</button>
-                                </div>
-                            </div>
-                        </td>
-                        <td class='package-wrapper'>
-                            <div class='package-padder'>
-                                <div class='package-title'>
-                                    3rd Package Name
-                                </div>
-                                <div class='package-divider'></div>
-                                <ul class='package-list'>
-                                    <li class='package-listitem'>
-                                        First thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        Second thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        Third thing in the package
-                                    </li>
-                                    <li class='package-listitem'>
-                                        If there is more things
-                                    </li>
-                                    <li class='package-listitem'>
-                                        What else does it include?
-                                    </li>
-                                </ul>
-
-                                <div class='package-book'>
-                                    <button class='btn btn-book'>Book Now</button>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                        <div class='package-book'>
+                            <a class='btn btn-book' href='./book.html'>Book Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class='package-wrapper'>
+                <div class='package-padder'>
+                    <div class='package-title title-2'>
+                        <div class='title-fader'></div>
+                        <div class='title-text'>Float &amp; Body Massage</div>
+                    </div>
+                    <div class='package-content'>
+                        <div class='package-cost-wrapper'>
+                            $108
+                        </div>
+                        <div class='package-divider'>
+                            <img src='./images/package_divider.png'>
+                        </div>
+                        <ul class='package-list'>
+                            <li class='package-listitem'>
+                                60 Minute Float
+                            </li>
+                            <li class='package-listitem'>
+                                30 Minute Body Massage
+                            </li>
+                            <li class='package-listitem'>
+                                Includes preparation and shower time
+                            </li>
+                            <li class='package-listitem'>
+                                A full hour will be spent in float pad
+                            </li>
+                            <li class='package-listitem'>
+                                Receive a body massage provided by our certified therapists
+                            </li>
+                        </ul>
+                        <div class='package-book'>
+                            <a class='btn btn-book' href='./book.html'>Book Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
