Book btn a tag + zip update

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
-                        <button class="btn btn-book">Book Now</button>
+                        <a class='btn btn-book' href='./book.html'>Book Now</a>
                     </li>
                 </ul>
             </div>
@@ -73,7 +73,7 @@
                                 <div class='contact-label'>Address</div>
                                 <div class='contact-content'>
                                     <p>1212 South State Street</p>
-                                    <p>Salt Lake City, UT, 84115</p>
+                                    <p>Salt Lake City, UT, 84111</p>
                                 </div>
                                 <div class='contact-label'>Phone Number</div>
                                 <div class='contact-content clear'>
