--- a/floating.html
+++ b/floating.html
@@ -43,7 +43,7 @@
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
-                        <button class="btn btn-book">Book Now</button>
+                        <a class='btn btn-book' href='./book.html'>Book Now</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                 </li>
                 <li class='services-menu-item'>
                     <a href='./hydromassage.html' class='services-menu-link'>
-                        Hydromassage
+                        HydroMassage
                         <div class='services-hover-id'></div>
                     </a>
 
