--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="menu-hover-id"></div>
                     </li>
                     <li class="menu-item">
-                        <button class="btn btn-book">Book Now</button>
+                        <a class='btn btn-book' href='./book.html'>Book Now</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
     <div id='carousel-container' class='carousel-container'>
         <div class='carousel-fade'></div>
         <div class='carousel-tagline'>
-            Relax, Refresh, and Renew
+            Relax, Restore, and Refresh
         </div>
         <div class='carousel-btn-wrapper'>
             <button class='btn btn-carousel'>Try Today</button>
@@ -64,7 +64,7 @@
         <div class='join-wrapper'>
             <div class='join-padder'>
                 <div class='join-header'>WANT TO START FEELING YOUR BEST?</div>
-                <div class='join-header'>Sign up today! And you'll recieve:</div>
+                <div class='join-header'>Sign up today! And you'll receive:</div>
                 <ul class='join-benefit-list'>
 
                     <li class='join-benefit-listitem'>Exclusive Discounts.</li>
